# Vue_Template_Project

./: .gitignore  .releaserc.json  README.md  RELEASE_PROCESS.md  csp.config.ts  eslint.config.js  gemini.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  stylelint.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.templateScripts/: setup.cjs  utils.cjs
.templateScripts/modules/: setupBrowserExtension.cjs  setupElectron.cjs  setupPlugin.cjs  setupProject.cjs
.templateScripts/templates/browser-extension/: README.md
.templateScripts/templates/browser-extension/.github/workflows/: release-extension.yml
.templateScripts/templates/browser-extension/public/: manifest.json
.templateScripts/templates/component-library/: README.md  package.json  vite.config.ts
.templateScripts/templates/component-library/src/: Component.tsx  Component.vue
.templateScripts/templates/electron-app/: README.md
.templateScripts/templates/electron-app/electron/: main.cjs  main.js  preload.js
.templateScripts/templates/utils-library/: README.md  package.json  tsconfig.json  vite.config.ts
.templateScripts/templates/utils-library/src/: index.ts
.templateScripts/templates/vite-plugin/: README.md  package.json  tsconfig.json  vite.config.ts
.templateScripts/templates/vite-plugin/src/: index.ts
.templateScripts/templates/vue-plugin/: README.md  package.json  tsconfig.json  vite.config.ts
.templateScripts/templates/vue-plugin/src/: index.ts
.templateScripts/templates/web-app/: README.md
.templateScripts/workflows/: ci.yml  release.yml
scripts/: setup.cjs
scripts/templates/component-library/: package.json  tsconfig.json
scripts/templates/component-library/src/: index.ts
scripts/templates/vite-plugin/: package.json
src/: main.py  main.ts  main.tsx
src/assets/: main.css
src/hooks/: store.ts
src/router/: index.ts  index.tsx
src/stores/: index.ts
src/views/: AboutView.tsx  HomeView.tsx  HomeView.vue
tests/: test_main.py
(+8 files in other folders)
